src/test/06-Errors/error-overload-class.txt
error-overload-class.ck:9:5: error: cannot overload functions with identical arguments...
[9]     fun void bar()
        ^
    |- 'void Foo.bar(  )' already defined elsewhere
